Fixed page height on mobile for sure?

--- a/src/app.css
+++ b/src/app.css
@@ -79,6 +79,7 @@ body {
 }
 
 body>div {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
